--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,11 @@
 {
+  "MongoDB": {
+    "ConnectionString": "mongodb://root:password@localhost:27017",
+    "DatabaseName": "easycheck_attendances_db"
+  },
+  "ConnectionStrings": {
+    "MySqlConnection": "Server=localhost;Port=3306;Database=easycheck_general_db;Uid=user;Pwd=password;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
