--- a/EasyCheck.csproj
+++ b/EasyCheck.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.1.35" />
+    <PackageReference Include="Microsoft.AspNetCore.Session" Version="2.2.0" />
     <PackageReference Include="MongoDB.Driver" Version="2.26.0" />
     <PackageReference Include="MySql.Data" Version="8.4.0" />
   </ItemGroup>
