--- a/.editorconfig
+++ b/.editorconfig
@@ -5,3 +5,6 @@ dotnet_diagnostic.CS8603.severity = silent
 
 # CS8604: Possible null reference argument.
 dotnet_diagnostic.CS8604.severity = none
+
+# CS8622: Nullability of reference types in type of parameter doesn't match the target delegate (possibly because of nullability attributes).
+dotnet_diagnostic.CS8622.severity = none
