--- a/EasyCheck.csproj
+++ b/EasyCheck.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Session" Version="2.2.0" />
     <PackageReference Include="MongoDB.Driver" Version="2.26.0" />
     <PackageReference Include="MySql.Data" Version="8.4.0" />
+    <PackageReference Include="System.IO.Ports" Version="8.0.0" />
   </ItemGroup>
 
 </Project>
